# 2D_robust_PGO

./: CMakeLists-CholeskyFailed.txt  CMakeLists.txt  README.md
cmake-modules/: FindGlog.cmake
datasets/Bovisa/: draw.py
examples/: 2D_optimizer_g2o.cpp  3D_from_disk_g2o.cpp  CMakeLists-CholeskyFailed.txt  CMakeLists.txt
examples/examples/: CSAIL-spoiled.g2o  CSAIL_.g2o  FR079.g2o  FR079_GT_LC.txt  FR079_PART.g2o  FRH_.g2o  FRH_GT.g2o  FRH_GT_LC.txt  bovisa04.g2o  bovisa06.g2o  clusters.txt  debug.txt  flexible-solved.g2o  indexVStrajectory.txt  indexVStrajectory_accelerated.txt  indexVStrajectory_accelerated_bovisa04.txt  indexVStrajectory_adjoint.txt  index_dispersion_transfrom_distance.txt  kitti_00_alpha_0.00.g2o  loop_serial.txt
examples/examples/tough/: CSAIL_2.g2o  CSAIL_lost_1_GT_LC.txt  FR079_1.g2o  FR079_2.g2o  FR079_3.g2o  FR079_5.g2o  FR079_6.g2o  FR079_8.g2o
include/: RRR.hpp  cluster.hpp  g2o_Interface.hpp  g2o_interface_se2_zihao.hpp  types.hpp  utils.hpp
include_update dis after new lc/: RRR.hpp  cluster.hpp  g2o_Interface.hpp
